# design-work

./: .gitignore  CMakeLists.txt  PROJECT_OVERVIEW.md  PYTHON_ENGINE_README.md  README.md  build.sh  build_linux.py  build_windows.py  launcher.py  pyqt6_game.py  requirements.txt  test_engine.py
assets/audio/: audio1.txt  audio2.txt  audio3.txt  audio4.txt
python_backend/: audio_system.py  cli_interface.py  config_system.py  game_engine.py  story_engine.py  transition_manager.py
src/: main.cpp
